syntax = "proto3";

package dnf.v1;

option go_package = "gen/dnf/v1";

// 多人游戏请求匹配请求
message MultiPlayRequestMatchRequest {
  uint32 transId = 1;
  uint32 matchtype = 2;
  uint32 dungeonindex = 3;
}

// 多人游戏请求匹配响应
message MultiPlayRequestMatchResponse {
  uint32 transId = 1;
  uint32 error = 2;
  string message = 3;
  uint64 matchingguid = 4;
  string bip = 5;
  uint32 bport = 6;
}

// 取消多人游戏请求匹配请求
message MultiPlayRequestMatchCancelRequest {
  uint32 transId = 1;
  uint64 matchingguid = 2;
}

// 取消多人游戏请求匹配响应
message MultiPlayRequestMatchCancelResponse {
  uint32 transId = 1;
  uint32 error = 2;
  string message = 3;
}

// 历史遗迹通知请求
message HistoricSiteNotiRequest {
  uint32 transId = 1;
}

// 历史遗迹通知响应
message HistoricSiteNotiResponse {
  uint32 transId = 1;
  uint32 error = 2;
  string message = 3;
}

// 加载公会捐赠信息请求
message LoadGuildDonationInfoRequest {
  uint32 transId = 1;
}

// 加载公会捐赠信息响应
message LoadGuildDonationInfoResponse {
  uint32 transId = 1;
  repeated RecipeInfo recipe = 2;
  uint32 error = 3;
  string message = 4;
}

// 配方信息
message RecipeInfo {
  uint32 index = 1;
}

// 梦境迷宫基本信息请求
message DreamMazeBasicInfoRequest {
  uint32 transId = 1;
}

// 梦境迷宫基本信息响应
message DreamMazeBasicInfoResponse {
  uint32 transId = 1;
  uint32 error = 2;
  string message = 3;
}

// 副本入场次数请求
message RaidEntranceCountRequest {
  uint32 transId = 1;
}

// 副本入场次数响应
message RaidEntranceCountResponse {
  uint32 transId = 1;
  repeated RaidEntranceInfo entrance = 2;
  uint32 error = 3;
  string message = 4;
}

// 副本入场信息
message RaidEntranceInfo {
  uint32 raidindex = 1;
  uint32 dailycharacter = 2;
  uint32 character = 3;
  uint32 account = 4;
  uint32 dailyrewardcharacter = 5;
  uint32 rewardcharacter = 6;
  uint32 rewardaccount = 7;
}

// 加载进度请求
message LoadingProgressRequest {
  uint32 transId = 1;
  uint32 value = 2;
}

// 加载进度响应
message LoadingProgressResponse {
  uint32 transId = 1;
  uint64 matchingguid = 2;
  uint64 charguid = 3;
  uint32 value = 4;
}

// 返回城镇请求
message ReturnToTownAtMultiPlayRequest {
  uint32 transId = 1;
}

// 返回城镇响应
message ReturnToTownAtMultiPlayResponse {
  uint32 transId = 1;
  uint32 error = 2;
  string message = 3;
}

// 自定义游戏房间设置请求
message CustomGameRoomSettingRequest {
  uint32 transId = 1;
  CustomData customdata = 2;
}

// 自定义数据
message CustomData {
  uint64 senderguid = 1;
  uint32 type = 2;
  int32 iValue = 3;
  string sValue = 4;
}

// 自定义游戏房间设置响应
message CustomGameRoomSettingResponse {
  uint32 transId = 1;
  uint32 error = 2;
  string message = 3;
}

// 控制组通知
message NotifyControlGroup {
  uint32 world = 1;
  uint32 channel = 2;
  uint64 partyguid = 3;
  uint64 partyleaderguid = 4;
  string ip = 5;
  uint32 port = 6;
  uint32 type = 7;
  uint32 area = 8;
  uint32 dungeonindex = 9;
  uint32 subtype = 10;
  uint32 stageindex = 11;
  string partyname = 12;
  repeated GroupMember users = 13;
  bool isobserver = 14;
  bool isobserverchat = 15;
  repeated BattleOption battleoptionlist = 16;
  uint32 transId = 17;
}

// 队伍成员
message GroupMember {
  uint64 charguid = 1;
  uint32 equipscore = 2;
  uint32 level = 3;
  string name = 4;
  uint64 gguid = 5;
  string gname = 6;
  bool partyleader = 7;
  uint32 fatigue = 8;
  uint32 world = 9;
  uint32 creditscore = 10;
  uint32 teamtype = 11;
  CustomData customdata = 12;
  uint32 ping = 13;
  uint32 mineworld = 14;
  uint64 specialcategoryitemindex = 15;
}

// 战斗选项
message BattleOption {
  uint32 type = 1;
}

// PK 记录请求
message PvpRecordRequest {
  uint64 charguid = 1;
}

// PK 记录响应
message PvpRecordResponse {
  repeated PvpRecordInfo records = 1;
  uint32 error = 2;
  string message = 3;
}

// PK 记录信息
message PvpRecordInfo {
  uint64 id = 1;
  uint64 roleId = 2;
  uint32 matchType = 3;
  bool win = 4;
  int32 score = 5;
  uint64 opponentId = 6;
  int64 battleTime = 7;
}

// PK 排名请求
message PvpRankingRequest {
  uint32 matchType = 1;
  uint32 page = 2;
  uint32 pageSize = 3;
}

// PK 排名响应
message PvpRankingResponse {
  repeated PvpRankingInfo rankings = 1;
  uint32 error = 2;
  string message = 3;
}

// PK 排名信息
message PvpRankingInfo {
  uint64 roleId = 1;
  string name = 2;
  uint32 level = 3;
  uint32 job = 4;
  uint32 score = 5;
  uint32 rank = 6;
  uint32 winCount = 7;
  uint32 loseCount = 8;
}

// PK 统计请求
message PvpStatsRequest {
  uint64 charguid = 1;
}

// PK 统计响应
message PvpStatsResponse {
  PvpStatsInfo stats = 1;
  uint32 error = 2;
  string message = 3;
}

// PK 统计信息
message PvpStatsInfo {
  uint64 roleId = 1;
  uint32 totalMatches = 2;
  uint32 winCount = 3;
  uint32 loseCount = 4;
  float winRate = 5;
  int32 totalScore = 6;
  int32 avgScore = 7;
  uint32 maxWinStreak = 8;
}

// PK 匹配历史请求
message PvpMatchHistoryRequest {
  uint64 charguid = 1;
  uint32 page = 2;
  uint32 pageSize = 3;
}

// PK 匹配历史响应
message PvpMatchHistoryResponse {
  repeated PvpMatchHistoryInfo history = 1;
  uint32 error = 2;
  string message = 3;
}

// PK 匹配历史信息
message PvpMatchHistoryInfo {
  uint64 id = 1;
  uint64 roleId = 2;
  uint32 matchType = 3;
  bool win = 4;
  int32 score = 5;
  string opponentName = 6;
  int64 battleTime = 7;
}

// PK 赛季信息请求
message PvpSeasonInfoRequest {
}

// PK 赛季信息响应
message PvpSeasonInfoResponse {
  PvpSeasonInfo season = 1;
  uint32 error = 2;
  string message = 3;
}

// PK 赛季信息
message PvpSeasonInfo {
  uint32 seasonId = 1;
  string seasonName = 2;
  int64 startTime = 3;
  int64 endTime = 4;
  uint32 status = 5;
}

// PK 奖励请求
message PvpRewardRequest {
  uint64 charguid = 1;
}

// PK 奖励响应
message PvpRewardResponse {
  repeated PvpRewardInfo rewards = 1;
  uint32 error = 2;
  string message = 3;
}

// PK 奖励信息
message PvpRewardInfo {
  uint32 rewardId = 1;
  string rewardName = 2;
  uint32 count = 3;
  bool claimed = 4;
}

// PK 每日重置请求
message PvpDailyResetRequest {
}

// PK 每日重置响应
message PvpDailyResetResponse {
  uint32 error = 2;
  string message = 3;
}

// PK 匹配类型请求
message PvpMatchTypesRequest {
}

// PK 匹配类型响应
message PvpMatchTypesResponse {
  repeated PvpMatchTypeInfo types = 1;
  uint32 error = 2;
  string message = 3;
}

// PK 匹配类型信息
message PvpMatchTypeInfo {
  uint32 matchType = 1;
  string typeName = 2;
  uint32 minLevel = 3;
  uint32 maxLevel = 4;
  uint32 minPlayers = 5;
  uint32 maxPlayers = 6;
}

// PK 战斗结果请求
message PvpBattleResultRequest {
  uint64 matchingguid = 1;
  bool win = 2;
  int32 score = 3;
  uint64 opponentId = 4;
}

// PK 战斗结果响应
message PvpBattleResultResponse {
  uint32 error = 2;
  string message = 3;
}
