syntax = "proto3";

package dnf.v1;

// Go代码生成选项
option go_package = "dnf/proto/v1;commonv1";

// Java代码生成选项（重要）
option java_multiple_files = true;  // 为每个消息生成独立的Java文件
option java_package = "com.dnfm.mina.protobuf.generated";
option java_outer_classname = "CommonTypesProto";

// 公会符号信息
message GuildSymbol {
  int32 index = 1;         // 索引
  int32 colorindex = 2;    // 颜色索引
}

// avatar物品信息
message SdAvatarItem {
  int32 index = 1;          // 索引
  int32 count = 2;          // 数量
  uint64 guid = 3;          // 物品GUID
  uint64 expiretime = 4;    // 过期时间
  int32 option = 5;         // 选项
  bool locked = 6;          // 是否锁定
  int32 scount = 7;         // 特殊数量
  int32 tcount = 8;         // 总数量
}

// 排名信息
message Ranking {
  uint64 guid = 1;              // 角色GUID
  int32 growtype = 2;           // 成长类型
  int32 secondgrowtype = 3;      // 次要成长类型
  int32 job = 4;                // 职业
  int32 level = 5;              // 等级
  string name = 6;              // 名称
  int64 rank = 7;               // 排名
  uint64 score = 8;             // 分数
  repeated GuildSymbol gsymbol = 9;  // 公会符号
  string gmastername = 10;       // 公会会长名称
  int32 launchinfo = 11;         // 启动信息
  int32 vip = 12;               // VIP等级
  string profileurl = 13;        // 头像URL
  string profilename = 14;       // 头像名称
  int32 wincount = 15;           // 获胜次数
  uint64 gwinpoint = 16;         // 公会获胜点数
  int32 winningrate = 17;        // 胜率
  repeated int32 spinfos = 18;   // 旋转信息
  int32 creditscore = 19;        // 信用分数
  int32 characterframe = 20;     // 角色边框
  int32 platform = 21;           // 平台
  uint32 platformserverid = 22;  // 平台服务器ID
  string gname = 23;             // 公会名称
}
