syntax = "proto3";

package dnf.v1;

// Go代码生成选项
option go_package = "github.com/pixb/DnfGameServer/dnf-go-client/gen/dnf/v1;dnfv1";

// Java代码生成选项（重要）
option java_multiple_files = true;  // 为每个消息生成独立的Java文件
option java_package = "com.dnfm.mina.protobuf.generated";  // 指定Java包名
option java_outer_classname = "GuildProto";  // 指定外层类名

// 公会创建请求
message GuildCreateRequest {
  int32 character_id = 1;       // 角色ID
  string guild_name = 2;         // 公会名称
  string guild_notice = 3;       // 公会公告
  int32 guild_type = 4;          // 公会类型
}

// 公会创建响应
message GuildCreateResponse {
  int32 error = 1;              // 错误码
  int32 character_id = 2;       // 角色ID
  int64 guild_id = 3;            // 公会ID
  string guild_name = 4;         // 公会名称
  bool success = 5;              // 是否成功
}

// 公会加入请求
message GuildJoinRequest {
  int32 character_id = 1;       // 角色ID
  int64 guild_id = 2;            // 公会ID
  string apply_message = 3;      // 申请消息
}

// 公会加入响应
message GuildJoinResponse {
  int32 error = 1;              // 错误码
  int32 character_id = 2;       // 角色ID
  int64 guild_id = 3;            // 公会ID
  bool success = 4;              // 是否成功
}

// 公会信息
message GuildInfo {
  int64 guild_id = 1;            // 公会ID
  string guild_name = 2;         // 公会名称
  string guild_notice = 3;       // 公会公告
  int32 guild_level = 4;         // 公会等级
  int32 guild_exp = 5;           // 公会经验
  int32 member_count = 6;        // 成员数量
  int32 max_member_count = 7;    // 最大成员数量
  string guild_master = 8;       // 公会会长
  int32 guild_type = 9;          // 公会类型
  int64 create_time = 10;        // 创建时间
}

// 公会信息请求
message GuildInfoRequest {
  int32 character_id = 1;       // 角色ID
  int64 guild_id = 2;            // 公会ID
}

// 公会信息响应
message GuildInfoResponse {
  int32 error = 1;              // 错误码
  int32 character_id = 2;       // 角色ID
  GuildInfo guild_info = 3;      // 公会信息
}

// 公会简要信息
message GuildBriefInfo {
  int64 guild_id = 1;            // 公会ID
  string guild_name = 2;         // 公会名称
  int32 guild_level = 3;         // 公会等级
  int32 member_count = 4;        // 成员数量
  int32 max_member_count = 5;    // 最大成员数量
  string guild_master = 6;       // 公会会长
  bool is_apply = 7;             // 是否已申请
}

// 公会列表请求
message GuildListRequest {
  int32 character_id = 1;       // 角色ID
  int32 page = 2;                // 页码
  int32 page_size = 3;           // 每页数量
  string search_name = 4;        // 搜索名称
  int32 sort_type = 5;           // 排序类型
}

// 公会列表响应
message GuildListResponse {
  int32 error = 1;              // 错误码
  int32 character_id = 2;       // 角色ID
  int32 total = 3;              // 总数
  int32 page = 4;               // 页码
  int32 page_size = 5;          // 每页数量
  repeated GuildBriefInfo guilds = 6;  // 公会简要信息列表
}
